# snake

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_features.cmake  compiler_warnings.cmake
snake/: CMakeLists.txt
snake/src/snake/: game.cpp  game.hpp  main.cpp  snake.cpp  snake.hpp
